--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<a href="www.ash-ics.ca">   
-  <img src="./images/logo.png">  
+<!DOCTYPE html>
+<html>
+<a href="http://www.ash-ics.ca">
+  <img src="./images/logo.png">  
 </a>
+</html>
